data/derived/comb/progs/unify/prog4702.ml.out
Characters 134-135:
  else sequence (sumList (digitsOfInt x)) i+1 in
                                      ^
Error: This expression has type int list
       but an expression was expected of type int
